# siaextractlib

./: .gitignore  README.md  pyproject.toml  requirements.txt  tests.py
docs/: README.md  api_reference.md
etc/: config.ini.example  copernicus_marine.json.example
omdepextractlib/sources/: copernicus.py
omdepextractlib/utils/: exceptions.py  metadata.py
src/omdepextractcli/: omdepextract.py
src/omdepextractlib/utils/: exceptions.py  metadata.py
src/siaextractcli/: siaextract.py
src/siaextractlib/extractors/: __init__.py  base_extractor.py  interfaces.py  motu.py  opendap.py
src/siaextractlib/extractors/copernicus/: __init__.py  motu.py  opendap.py
src/siaextractlib/processing/: parallelism.py  wrangling.py
src/siaextractlib/utils/: auth.py  exceptions.py  log.py  metadata.py
tests/: README.md  test_lib_copernicus_marine.py  test_lib_motu.py  test_lib_opendap.py
tests/lib/: general_utils.py
tools/: dummy_test.py  general_utils.py
